--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -52,9 +53,8 @@
                 <label for="observations">Observaciones:</label>
                 <textarea id="observations" name="observations"></textarea>
                 
-                <!-- Campo de carga de imagen con atributo capture="camera" -->
                 <label for="image">Imagen:</label>
-                <input type="file" id="image" name="image" accept="image/*" capture="camera" multiple required>
+                <input type="file" id="image" name="image" accept="image/*" multiple required>
                 
                 <button type="submit">Registrar</button>
             </form>
